envoy/envoy.yaml
static_resources:
  listeners:
    - name: public_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: public_http
                codec_type: AUTO
                use_remote_address: true
                route_config:
                  name: api_demo_routes
                  virtual_hosts:
                    - name: api_demo
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: content-type
                                string_match:
                                  prefix: application/grpc
                          route:
                            cluster: api_demo_grpc
                            timeout: 0s
                        - match:
                            prefix: "/"
                          route:
                            cluster: api_demo_http
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                upgrade_configs:
                  - upgrade_type: websocket

  clusters:
    - name: api_demo_http
      type: STRICT_DNS
      connect_timeout: 2s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: api_demo_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api-demo-1
                      port_value: 5089
              - endpoint:
                  address:
                    socket_address:
                      address: api-demo-2
                      port_value: 5089
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 2
          http_health_check:
            path: /healthz

    - name: api_demo_grpc
      type: STRICT_DNS
      connect_timeout: 2s
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: api_demo_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api-demo-1
                      port_value: 5090
              - endpoint:
                  address:
                    socket_address:
                      address: api-demo-2
                      port_value: 5090

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
